tar1090/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tar1090-service
spec:
  type: ClusterIP
  selector: 
    app: tar1090
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
