tar1090/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tar1090
spec:
  tls:
    - hosts:
        - aircraft.example.com
      secretName: example-tls
  rules:
  - host: aircraft.example.com
    http:
      paths:
      - backend:
          service:
            name: tar1090-service
            port: 
              number: 80
        path: /
        pathType: Prefix
